Updated for NSData

--- a/control
+++ b/control
@@ -1,9 +1,9 @@
 Package: com.wizages.writeanywhere
 Name: WriteAnywhere
 Depends: mobilesubstrate
-Version: 0.0.1
+Version: 0.1~beta1
 Architecture: iphoneos-arm
-Description: An awesome MobileSubstrate tweak!
+Description: A simple write file, dir or string to any mobile owned folder. This is to help sandboxed apps like preferences haha
 Maintainer: wizages
 Author: wizages
 Section: Tweaks
